Fixed more overflow problems

--- a/src/components/servers/drawer/header/styles.module.scss
+++ b/src/components/servers/drawer/header/styles.module.scss
@@ -9,6 +9,12 @@
   padding-left: 10px;
   width: 100%;
   flex: 1;
+
+  .serverName {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
   
   .showMoreIcon {
     margin-left: auto;
